# eme_avr_vehicle_speed_ecu_project

./: .gitignore  CMakeLists.txt  README.md  Vehicle_speed_ecu.atsln  std.h
Vehicle_speed_ecu/: Vehicle_speed_ecu.componentinfo.xml  Vehicle_speed_ecu.cproj  main.c
Vehicle_speed_ecu/APP/: app_config.h  app_interface.h  app_private.h  app_program.c
Vehicle_speed_ecu/Debug/: Makefile  Vehicle_speed_ecu.elf  Vehicle_speed_ecu.hex  Vehicle_speed_ecu.lss  Vehicle_speed_ecu.map  Vehicle_speed_ecu.srec  main.d  makedep.mk
Vehicle_speed_ecu/Debug/HAL/buzz/: buzz_program.d
Vehicle_speed_ecu/Debug/HAL/kl15/: KL_switch.d
Vehicle_speed_ecu/Debug/HAL/kpd/: kpd_program.d
Vehicle_speed_ecu/Debug/HAL/lcd/: lcd_program.d
Vehicle_speed_ecu/Debug/HAL/ldr/: ldr_program.d
Vehicle_speed_ecu/Debug/HAL/led/: Led.d
Vehicle_speed_ecu/Debug/MCAL/adc/: adc_lconfig.d  adc_program.d
Vehicle_speed_ecu/Debug/MCAL/gpio/: gpio.d
Vehicle_speed_ecu/HAL/buzz/: buzz_interface.h
Vehicle_speed_ecu/HAL/kl15/: KL_switch.c
Vehicle_speed_ecu/HAL/kpd/: kpd_config.h  kpd_program.c
Vehicle_speed_ecu/HAL/lcd/: lcd_config.h  lcd_interface.h  lcd_private.h  lcd_program.c
Vehicle_speed_ecu/HAL/ldr/: ldr_program.c
Vehicle_speed_ecu/HAL/led/: Led.c  Led.h
Vehicle_speed_ecu/HAL/throttle/: throttle.c  throttle.h
Vehicle_speed_ecu/MCAL/adc/: adc_config.h  adc_lconfig.c  adc_program.c
Vehicle_speed_ecu/MCAL/i2c/: i2c.c  i2c_private.h
Vehicle_speed_ecu/MCAL/spi/: spi_config.h
Vehicle_speed_ecu/MCAL/timer/: Timers_Services.c  timer_program.c
comm_ecu/: comm_ecu.componentinfo.xml  comm_ecu.cproj  main.c
comm_ecu/APP/: app_config.h  app_interface.h  app_private.h  app_program.c
comm_ecu/Debug/: Makefile  comm_ecu.elf  comm_ecu.lss  comm_ecu.map  comm_ecu.srec  makedep.mk
comm_ecu/HAL/eeprom/: eeprom.c  eeprom.h  eeprom_Cfg.h
comm_ecu/HAL/lcd/: lcd_config.h  lcd_interface.h  lcd_private.h  lcd_program.c
comm_ecu/HAL/led/: Led_Cfg.h
comm_ecu/MCAL/i2c/: i2c.c  i2c_config.h  i2c_private.h
comm_ecu/MCAL/spi/: spi_interface.h  spi_private.h
comm_ecu/MCAL/timer/: timer_interface.h  timer_program.c
common_drivers/COMMON/: bit_math.h  interrupts.h  mem_map.h  std.h
common_drivers/COMMON/timer/: Timers_Services.c  Timers_Services.h  timer.c  timer_program.c
common_drivers/MCAL/spi/: spi_config.h  spi_interface.h  spi_private.h  spi_program.c
